--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,89 +1,77 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:clickable="false"
     android:orientation="vertical"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/background"
-    android:clickable="false">
+    tools:context=".MainActivity">
 
 
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:id="@+id/imageButton"
-                android:src="@drawable/iconclear"
-                android:scaleType="fitCenter"
-                android:background="@drawable/iconclear"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_above="@+id/imageButton2"
-                android:layout_alignRight="@+id/imageButton2"
-                android:layout_alignEnd="@+id/imageButton2" />
-
-
-            <Button
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:id="@+id/imageButton1"
-                android:src="@drawable/button1"
-                android:scaleType="fitCenter"
-                android:background="@drawable/button1"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:text="הגדרות"
-                android:textSize="30dp" />
+    <ImageView
+        android:id="@+id/iconclear"
+        android:layout_width="163dp"
+        android:layout_height="241dp"
+        android:background="@drawable/iconclear"
+        android:scaleType="fitCenter"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
     <Button
+        android:id="@+id/btDefinition"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:id="@+id/imageButton5"
-        android:src="@drawable/button5"
-        android:background="@drawable/button5"
+        android:background="@drawable/btDefinition"
         android:scaleType="fitCenter"
+        android:text="@string/btDefinition"
+        android:textSize="30sp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="155dp"
-        android:clickable="true"
-        android:text="לוח שנה"
-        android:textSize="30dp" />
-
-        <Button
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:id="@+id/imageButton2"
-            android:src="@drawable/button2"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button2"
-            android:layout_marginBottom="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/imageButton1"
-            android:layout_toStartOf="@+id/imageButton1"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginLeft="20dp"
-            android:text="יומן מעקב"
-            android:textSize="30dp" />
+        android:layout_alignParentEnd="true" />
 
 
+    <Button
+        android:id="@+id/btCalendar"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/btCalendar"
+        android:scaleType="fitCenter"
+        android:text="@string/btCalendar"
+        android:textSize="30sp"
+        android:layout_alignBaseline="@+id/btDefinition"
+        android:layout_alignBottom="@+id/btDefinition"
+        android:layout_toRightOf="@+id/iconclear"
+        android:layout_toEndOf="@+id/iconclear" />
 
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:id="@+id/imageButton3"
-            android:src="@drawable/button3"
-            android:scaleType="fitCenter"
-            android:background="@drawable/button3"
-            android:layout_gravity="right"
-            android:layout_alignTop="@+id/imageButton"
-            android:layout_alignRight="@+id/imageButton1"
-            android:layout_alignEnd="@+id/imageButton1"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text="התחל הפסק"/>
+    <Button
+        android:id="@+id/btStatus"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@drawable/btStatus"
+        android:scaleType="fitCenter"
+        android:text="@string/btStatus"
+        android:textSize="30sp"
+        android:layout_below="@+id/iconclear"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="37dp" />
 
+
+    <Button
+        android:id="@+id/btStartEnd"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/btStartEnd"
+        android:scaleType="fitCenter"
+        android:text="@string/btStart"
+        android:textSize="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
