--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -7,4 +7,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.mypuredays.mypuredays.DefinitionActivity">
 
+    <ListView
+        android:id="@+id/definition_list"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="25"/>
+
 </RelativeLayout>
