--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,8 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:text="הגדרות"
-                android:textSize="30dp" />
+                android:textSize="30dp"
+               />
 
 
     <Button
@@ -50,7 +51,8 @@
         android:layout_marginTop="155dp"
         android:clickable="true"
         android:text="לוח שנה"
-        android:textSize="30dp" />
+        android:textSize="30dp"
+        android:onClick="onClick_btn"/>
 
         <Button
             android:layout_width="150dp"
