--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,16 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="left"
     android:background="#ffffff"
     android:orientation="horizontal" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:gravity="left"
-        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/tv_event"
@@ -21,17 +13,17 @@
             android:text="TextView"
             android:textColor="#000000"
             android:textSize="16dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/tv_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:padding="4dp"
-            android:text="TextView" />
+            android:text="TextView"
+            android:layout_weight="1"/>
 
-    </LinearLayout>
 
 </LinearLayout>
 
