--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -11,16 +11,68 @@
     tools:context="com.mypuredays.mypuredays.StatusActivity">
 
     <LinearLayout
+        android:id="@+id/LAYOUT_lastPeriodDate"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        android:background="@drawable/button4"
+
+        >
+
+        <TextView
+            android:id="@+id/LABEL_lastPeriodDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/lastPeriodDate"
+            />
+
+        <TextView
+            android:id="@+id/FIELD_lastPeriodDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LAYOUT_cleanCount"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+
+        >
+
+        <TextView
+            android:id="@+id/LABEL_cleanCount"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cleanCount"
+            />
+
+        <TextView
+            android:id="@+id/FIELD_cleanCount"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/LAYOUT_periodLength"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
 
         <TextView
             android:id="@+id/LABEL_periodLength"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/periodLength"
              />
 
         <TextView
@@ -34,13 +86,16 @@
         android:id="@+id/LAYOUT_periodAvg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
 
         <TextView
             android:id="@+id/LABEL_periodAvg"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/periodAvg"
             />
 
         <TextView
@@ -50,7 +105,70 @@
             android:layout_weight="1" />
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/LAYOUT_dateMikveh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"></LinearLayout>
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+
+        <TextView
+            android:id="@+id/LABEL_dateMikveh"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/dateMikveh"
+            />
+
+        <TextView
+            android:id="@+id/FIELD_dateMikveh"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/LAYOUT_prishaDate"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+
+        <TextView
+            android:id="@+id/LABEL_prishaDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/prishaDate"
+            />
+
+        <TextView
+            android:id="@+id/FIELD_prishaDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/LAYOUT_nextPeriodDate"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:layout_weight="1"
+        >
+
+        <TextView
+            android:id="@+id/LABEL_nextPeriodDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/nextPeriodDate"
+            />
+
+        <TextView
+            android:id="@+id/FIELD_nextPeriodDate"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+    </LinearLayout>
+
 </LinearLayout>
