change name button1

--- a/app/src/main/res/layout/activity_status.xml
+++ b/app/src/main/res/layout/activity_status.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
         >
 
@@ -46,7 +46,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
 
         >
@@ -79,7 +79,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
 
         >
@@ -110,7 +110,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
 
         >
@@ -141,7 +141,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
 
         >
@@ -172,7 +172,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
         android:layout_marginBottom="10dp"
 
         >
@@ -203,7 +203,7 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:layout_weight="1"
-        android:background="@drawable/squarebutton"
+        android:background="@drawable/square1"
 
         >
 
