--- a/app/src/main/res/layout/activity_definition.xml
+++ b/app/src/main/res/layout/activity_definition.xml
@@ -30,7 +30,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name1"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -64,7 +63,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name2"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -95,7 +93,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name3"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -126,7 +123,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name4"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -158,7 +154,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name5"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -189,7 +184,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name6"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -220,7 +214,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name7"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -252,7 +245,6 @@
         <TextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/item_name8"
-            android:gravity="center"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
@@ -263,7 +255,35 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/square_button6"
+        android:layout_marginBottom="10dp"
+        android:layout_weight="1">
 
+
+        <Spinner
+            android:id="@+id/spinner_type_period"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_weight="2"/>
+
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/item_name9"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
