--- a/app/src/main/res/layout/activity_dialog_calendar.xml
+++ b/app/src/main/res/layout/activity_dialog_calendar.xml
@@ -2,31 +2,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:weightSum="1">
 
     <Button
         android:id="@+id/dialogButtonStart"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btDialogStart"
-        android:layout_marginTop="5dp" />
+        android:text="@string/btDialogStart"/>
     <Button
         android:id="@+id/dialogButtonEnd"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btDialogEnd"
-        android:layout_marginTop="5dp" />
+        android:text="@string/btDialogEnd"/>
     <EditText
         android:inputType="text"
         android:id="@+id/text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="#FFF" />
+        android:textColor="#FFF"/>
     />
     <Button
         android:id="@+id/dialogButtonSaveNote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btDialogSaveNote"
-        android:layout_marginTop="5dp" />
+        android:text="@string/btDialogSaveNote" />
+    <Button
+        android:id="@+id/dialogButtonClearDay"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btClearDay"/>
 </LinearLayout>
